--- a/EventHubTest/EventHubTest.csproj
+++ b/EventHubTest/EventHubTest.csproj
@@ -5,4 +5,9 @@
     <TargetFramework>netcoreapp2.0</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.Azure.EventHubs" Version="2.0.0" />
+    <PackageReference Include="Microsoft.Azure.EventHubs.Processor" Version="2.0.1" />
+  </ItemGroup>
+
 </Project>
